// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`on page load at narrow width tabindex should be added to footer panel headings if it is not present 1`] = `
"
                <div class=\\"c-footer-panel\\" data-panel-collapsible=\\"\\">
                    <h2 data-footer-panel-heading=\\"\\" tabindex=\\"0\\">
                        Header text
                    </h2>
                </div>
            <div class=\\"c-screen-sizer\\"></div>"
`;

exports[`on page load at narrow width tabindex should not be removed from footer panel headings 1`] = `
"
                <div class=\\"c-footer-panel\\" data-panel-collapsible=\\"\\">
                    <h2 data-footer-panel-heading=\\"\\" tabindex=\\"0\\">
                        Header text
                    </h2>
                </div>
            <div class=\\"c-screen-sizer\\"></div>"
`;

exports[`on page load at normal width tabindex should be removed from footer panel headings 1`] = `
"
                <div class=\\"c-footer-panel\\" data-panel-collapsible=\\"\\">
                    <h2 data-footer-panel-heading=\\"\\">
                        Header text
                    </h2>
                </div>
            <div class=\\"c-screen-sizer\\"></div>"
`;

exports[`on page load footer panels are collapsed 1`] = `
"
            <div class=\\"c-footer-panel is-collapsed\\" data-panel-collapsible=\\"\\">
                <h2>
                    Header text
                </h2>
            </div>
        "
`;
